Recent updates to the custom LED theme page include enhanced color picker placement options (top, bottom, left, or right) to ensure it never appears off-screen and remains accessible. Additionally, new button layouts for Haute42 (13 & 16 buttons) and DuelPad (16 buttons) have been added to the preview layout options dropdown list.

--- a/www/src/Pages/CustomThemePage.scss
+++ b/www/src/Pages/CustomThemePage.scss
@@ -52,7 +52,7 @@
  * canvas drawing and animation library instead.
  *****************************************************************************************/
 
-$preview-height: 400px;
+$preview-height: 450px;
 $preview-width: calc($preview-height * 2);
 $preview-padding: calc($preview-height / 20);
 $button-size-multiplier: 3;
@@ -389,4 +389,248 @@ $button-keycap: 19px;
 		left: calc(50% + #{$button-24mm * 11});
 		top: $button-24mm * 3.25;
 	}
+}
+
+.led-preview-stickless-haute42-13 {
+	.A1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 3.5});
+		top: calc(0% - #{$button-24mm * 2.5});
+	}
+	.Up {
+		@include arcade-button($button-24mm, true);
+		left: 50%;
+		right: 50%;
+		top: calc(50% + #{$button-24mm * 1.5});
+	}
+	.Left {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 7.75});
+		top: $button-24mm;
+	}
+	.Down {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 4.5});
+		top: $button-24mm;
+	}
+	.Right {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 1.5});
+		top: $button-24mm * 2.5;
+	}
+
+	.B3 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 1.5});
+		top: $button-24mm;
+	}
+	.B4 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 4.75});
+		top: 0;
+	}
+	.R1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 8});
+		top: 0;
+	}
+	.L1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 11.25});
+		top: 0;
+	}
+	.B1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 1.25});
+		top: $button-24mm * 4.25;
+	}
+	.B2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 4.5});
+		top: $button-24mm * 3.25;
+	}
+	.R2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 7.75});
+		top: $button-24mm * 3.25;
+	}
+	.L2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 11});
+		top: $button-24mm * 3.25;
+	}
+}
+
+.led-preview-stickless-haute42-16 {
+	.A1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 3.5});
+		top: calc(0% - #{$button-24mm * 2.5});
+	}
+	.Up {
+		@include arcade-button($button-24mm, true);
+		left: 50%;
+		right: 50%;
+		top: calc(50% + #{$button-24mm * 1.5});
+	}
+	.Left {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 7.75});
+		top: $button-24mm;
+	}
+	.Down {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 4.5});
+		top: $button-24mm;
+	}
+	.Right {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 1.5});
+		top: $button-24mm * 2.5;
+	}
+
+	.B3 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 1.5});
+		top: $button-24mm;
+	}
+	.B4 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 4.75});
+		top: 0;
+	}
+	.R1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 8});
+		top: 0;
+	}
+	.L1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 11.25});
+		top: 0;
+	}
+	.B1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 1.25});
+		top: $button-24mm * 4.25;
+	}
+	.B2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 4.5});
+		top: $button-24mm * 3.25;
+	}
+	.R2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 7.75});
+		top: $button-24mm * 3.25;
+	}
+	.L2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 11});
+		top: $button-24mm * 3.25;
+	}
+	.R3 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 3.5});
+		top: calc(37% + #{$button-24mm * 1.5});
+	}
+	.L3 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 3.5});
+		top: calc(50% + #{$button-24mm * 1.5});
+	}
+	.A2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(59% - #{$button-24mm});
+		top: calc(0% - #{$button-24mm * 2.5});
+	}
+}
+
+.led-preview-stickless-duelpad-16 {
+	.A1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 3.5});
+		top: calc(0% - #{$button-24mm * 2.5});
+	}
+	.Up {
+		@include arcade-button($button-24mm, true);
+		left: 50%;
+		right: 50%;
+		top: calc(50% + #{$button-24mm * 2.5});
+	}
+	.Left {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 7.75});
+		top: $button-24mm;
+	}
+	.Down {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 4.5});
+		top: $button-24mm;
+	}
+	.Right {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 1.5});
+		top: $button-24mm * 2.5;
+	}
+
+	.B3 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 1.5});
+		top: $button-24mm;
+	}
+	.B4 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 4.75});
+		top: 0;
+	}
+	.R1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 8});
+		top: 0;
+	}
+	.L1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 11.25});
+		top: 0;
+	}
+	.B1 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 1.25});
+		top: $button-24mm * 4.25;
+	}
+	.B2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 4.5});
+		top: $button-24mm * 3.25;
+	}
+	.R2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 7.75});
+		top: $button-24mm * 3.25;
+	}
+	.L2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 11});
+		top: $button-24mm * 3.25;
+	}
+	.R3 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% + #{$button-24mm * 2.5});
+		top: calc(37% + #{$button-24mm * 2});
+	}
+	.L3 {
+		@include arcade-button($button-24mm, true);
+		left: calc(50% - #{$button-24mm * 11});
+		top: $button-24mm * 2;
+	}
+	.A2 {
+		@include arcade-button($button-24mm, true);
+		left: calc(59% - #{$button-24mm});
+		top: calc(0% - #{$button-24mm * 2.5});
+	}
+}
+
+.led-color-picker {
+    min-width: 250px;
 }
